[package]
name = "redo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "redo"
path = "src/main.rs"

[lib]
name = "redo"
path = "src/redo/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
md-5="0.10.1"
tempfile="3.3.0"
base16ct={version = "0.1.1", features = ["alloc"]}
